Code Lens works deleteCassettesCurrentFile command works Remaining: deleteCassettesCurrentDirectory deleteCassettesAll

--- a/package.json
+++ b/package.json
@@ -38,7 +38,20 @@
         "menus": {
             "editor/context": []
         },
-        "commands": []
+        "commands": [
+            {
+                "command": "vcrpy-cassette-mgr.deleteCassettesCurrentFile",
+                "title": "Delete Cassettes in Current File"
+            },
+            {
+                "command": "vcrpy-cassette-mgr.deleteCassettesCurrentDirectory",
+                "title": "Delete Cassettes in Current Directory"
+            },
+            {
+                "command": "vcrpy-cassette-mgr.deleteCassettesAll",
+                "title": "Delete Cassettes in Workspace"
+            }
+        ]
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
