--- a/package.json
+++ b/package.json
@@ -69,6 +69,16 @@
                         "Confirm before deleting any cassettes"
                     ],
                     "description": "Choose when to confirm before deleting cassettes."
+                },
+                "vcrpy-cassette-mgr.cassetteButtonOpen": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Show a button in the editor to open the cassette file."
+                },
+                "vcrpy-cassette-mgr.cassetteButtonDelete": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Show a button in the editor to delete the cassette file."
                 }
             }
         },
