--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "engines": {
         "vscode": "^1.85.0"
     },
-    "activationEvents": ["onStartupFinished"],
+    "activationEvents": [
+        "onStartupFinished"
+    ],
     "main": "./out/extension.js",
     "contributes": {
         "configuration": {
@@ -55,7 +57,12 @@
                 "vcrpy-cassette-mgr.deleteConfirmation": {
                     "type": "number",
                     "default": 3,
-                    "enum": [0, 1, 2, 3],
+                    "enum": [
+                        0,
+                        1,
+                        2,
+                        3
+                    ],
                     "enumItemLabels": [
                         "Never",
                         "Workspace",
@@ -105,14 +112,16 @@
         "test": "vscode-test"
     },
     "devDependencies": {
-        "@types/vscode": "^1.85.0",
         "@types/mocha": "^10.0.6",
         "@types/node": "18.x",
+        "@types/sinon": "^17.0.2",
+        "@types/vscode": "^1.85.0",
         "@typescript-eslint/eslint-plugin": "^6.13.1",
         "@typescript-eslint/parser": "^6.13.1",
-        "eslint": "^8.54.0",
-        "typescript": "^5.3.2",
         "@vscode/test-cli": "^0.0.4",
-        "@vscode/test-electron": "^2.3.8"
+        "@vscode/test-electron": "^2.3.8",
+        "eslint": "^8.54.0",
+        "sinon": "^17.0.1",
+        "typescript": "^5.3.2"
     }
 }
